syntax = "proto3"; 

option csharp_namespace = "BlazorGrpcWebApp.Shared";
package UnitServiceGrpc; 

service UnitServiceGrpc { 
	rpc GetGrpcUnits (GrpcUnitRequest) returns (stream GrpcUnitResponse) {}
	rpc CreateGrpcUnit (GrpcUnitRequest) returns (GrpcUnitResponse) {}
	rpc UpdateGrpcUnit (GrpcUnitRequest) returns (GrpcUnitResponse) {}
	rpc DeleteGrpcUnit (GrpcUnitDeleteRequest) returns (GrpcUnitDeleteResponse) {}
} 

message GrpcUnit {
	int32 id = 1;
	string title = 2;
	int32 attack = 3;
	int32 defense = 4;
	int32 bananaCost = 5;
	int32 hitPoints = 6;
}

message GrpcUnitRequest {
	GrpcUnit grpcUnit = 1;
}

message GrpcUnitResponse {
	GrpcUnit grpcUnit = 1;
}

message GrpcUnitDeleteRequest {
	int32 unit_id = 1;
}

message GrpcUnitDeleteResponse {
	int32 unit_id = 1;
}